# purchase_prediction

./: README.md  purchase_prediction.ipynb  pyproject.toml  requirements.txt
